update index content

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="content">
-        <span>Hello World!</span>
+        <span>Today is Wed!</span>
     </div>
 </body>
 </html>
