add date to index page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="content">
-        <span>Hello World!</span>
+        <span>Today is 12 Apr 2023</span>
     </div>
 </body>
 </html>
