--- a/NewWeb.html
+++ b/NewWeb.html
@@ -1,4 +1,13 @@
-<html>
-  <head></head>
-  <body>This file is created on GitHub. From your origin/master</body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Welcome to my website</title>
+  </head>
+
+<body>This file is created on GitHub. From your origin/master</body>
+
 </html>
