--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Welcome to my website</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="content">
-        <span>Date and Time</span>
-        <span>Today is Wed!</span>
-        <span>Today is 12 Apr 2023</span>
+      <span>Date and Time</span>
+      <span>Today is Wed!</span>
+      <span>Today is 12 Apr 2023, no it is not</span>
     </div>
-</body>
+  </body>
 </html>
