--- a/NewWeb.html
+++ b/NewWeb.html
@@ -1,4 +1,16 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  </html>
 <html>
   <head></head>
   <body>This file is created on GitHub. From your origin/master</body>
 </html>
+</body>
+
