--- a/NewWeb.html
+++ b/NewWeb.html
@@ -10,7 +10,7 @@
 
 <body>This file is created on GitHub. From your origin/master
   <div>
-    try git push 
+    try git push from local
   </div>
 </body>
 
