add new contents

--- a/NewWeb.html
+++ b/NewWeb.html
@@ -8,6 +8,10 @@
     <title>Welcome to my website</title>
   </head>
 
-<body>This file is created on GitHub. From your origin/master</body>
+<body>
+  <div>
+    hello world!
+  </div>
+  This file is created on GitHub. From your origin/master</body>
 
 </html>
