add victor feature

--- a/feat2.html
+++ b/feat2.html
@@ -7,6 +7,6 @@
     <title>Feature 2 Webpage</title>
 </head>
 <body>
-    <span>This is Feature 2</span>
+    <span>This is Feature 2 -- Victor Feature</span>
 </body>
 </html>
