--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <span>Today is Wed!</span>
         <span>Today is 12 Apr 2023</span>
         <span>Push test</span>
+        <p>Hello from devops 10th</p>
     </div>
   </body>
 </html>
