--- a/feat1.html
+++ b/feat1.html
@@ -10,5 +10,7 @@
     <span>This is Feature 1</span>
     <span>This is Feature 1 added by Johnson</span>
     <div>hello</div>
+
+    <span>hello devops</span>
   </body>
 </html>
