index modified by barney

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <span>Today is 12 Apr 2023</span>
         <span>Push test</span>
         <p>Hello from devops 10th</p>
+        <p>Hello world by barney!</p>
     </div>
   </body>
 </html>
