--- a/index.html
+++ b/index.html
@@ -26,5 +26,6 @@
         <p>Hello from devops 10th</p>
         <p>Hello world by barney!</p>
     </div>
+    <div>hello world by barney</div>
   </body>
 </html>
